refactor: remove FunctionalTransaction usage
FunctionalTransaction 사용 코드를 제거하고 Spring의 AOP기반 트랜잭션 처리를 위해 @Transactional 어노테이션을 추가했습니다.